--- a/pod.yml
+++ b/pod.yml
@@ -1,9 +1,8 @@
 apiVersion: v1
-kind: Pod
-metadata:
-  name: california
-spec:
-  containers:
-  - name: california-c
-    image: subaniprasad/californiaapp:1
-
+kind: Pod 
+metadata:    
+  name: california 
+spec:    
+  containers:    
+  - name: california-c      
+    image: httpd 
