--- a/deployment1.yml
+++ b/deployment1.yml
@@ -1,9 +1,15 @@
+# manifest file to display the the usage of strategy type Recreate
+
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fleetman-application
 spec:
-  replicas: 1 
+  replicas: 5
+  revisionHistoryLimit: 15
+  strategy:
+      type: Recreate
   selector:
     matchLabels:
       app: webapp
@@ -14,7 +20,7 @@ spec:
     spec:
       containers:
       - name: fleetman
-        image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
+        image: subaniprasad/californiaapp:1
         resources:
           limits:
              cpu: 200m
