--- a/deployment2.yml
+++ b/deployment2.yml
@@ -1,9 +1,18 @@
+ # manifest file to display the the usage of strategy type Rolling Update
+
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fleetman-application
 spec:
-  replicas: 1 
+  replicas: 5
+  revisionHistoryLimit: 15
+  strategy:
+      type: RollingUpdate
+      rollingUpdate:
+          maxSurge: 1
+          maxUnavailable: 1
   selector:
     matchLabels:
       app: webapp
@@ -14,7 +23,7 @@ spec:
     spec:
       containers:
       - name: fleetman
-        image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
+        image: richardchesterwood/k8s-fleetman-webapp-angular:release0
         resources:
           limits:
              cpu: 200m
